[mit500.m1]
name = "m1"
version = "0.0.1"
description = "The description of the package"

license = "MIT"

authors = [
    "Yinghuan Niu <yinghuan.niu@csuglobal.edu>"
]

readme = 'README.md'

repository = "https://github.com/newinone/mis500_m1.git"
homepage = "https://github.com/newinone/mis500_m1.git"

keywords = ['mit500']

[tool.poetry.dependencies]
python = "~2.7"  # Compatible python versions
toml = "^0.9"
# Dependencies with extras
# requests = { version = "^2.13", extras = [ "security" ] }
# Python specific dependencies with prereleases allowed
# pathlib2 = { version = "^2.2", python = "~2.7", allows-prereleases = true }
# Git dependencies
# cleo = { git = "https://github.com/sdispater/cleo.git", branch = "master" }

# Optional dependencies (extras)
# pendulum = { version = "^1.4", optional = true }

[tool.poetry.dev-dependencies]
pytest = "^3.0"
# pytest-cov = "^2.4"

# [tool.poetry.scripts]
# my-script = 'my_package:main'